--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
 :root {
+    --text-color: #fff;
+    --border-color: #555555;
+    --background-color: #1b1b1b;
+    --box-color: #1b1b1b;
+    --input-box-color: #292929;
+    --input-box-highlighted: #444444;
+}
+
+:root {
     padding: 0;
     margin: 0;
     width: 100%;
     font-family: 'Segoe UI', Roboto, sans-serif;
-    background-color: #121212;
-    color: #fff;
+    background-color: var(--background-color);
+    color: var(--text-color);
     box-sizing: border-box;
 }
 
@@ -20,7 +29,7 @@ html, body {
     min-width: 300px;
     max-width: 700px;
     padding: 30px;
-    background-color: #1b1b1b;
+    background-color: var(--background-color);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
