--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@
     background-color: var(--background-color);
     color: var(--text-color);
     box-sizing: border-box;
+    min-height: 100vh;
+    background-image: url('/img.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 html, body {
@@ -41,8 +47,9 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 100%;
-    padding: 20px;
+    min-height: 100vh;
+    padding: 30px 20px 20px 20px;
     box-sizing: border-box;
+    flex-direction: column;
 }
