--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@ html, body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
+.main-container p {
+    text-align: center;
+}
+
 .center {
     display: flex;
     justify-content: center;
